--- a/src/styles.css
+++ b/src/styles.css
@@ -181,7 +181,7 @@ textarea {
   font-size: inherit;
 }
 
-.search-bar button {
+button {
   padding: 10px;
   border: 1px solid var(--secondary-color);
   background-color: var(--primary-color);
@@ -192,4 +192,9 @@ textarea {
 .search-bar input[type="text"]:focus {
   box-shadow: 0 0 5pt 2pt var(--secondary-color);
   outline-width: 0px;
+}
+
+.history-button {
+  position: relative;
+  margin-left: 200px;
 }
