--- a/src/styles.css
+++ b/src/styles.css
@@ -189,6 +189,9 @@ button {
   border-radius: 10px;
 }
 
+button:hover {
+  border-color: white;
+}
 .search-bar input[type="text"]:focus {
   box-shadow: 0 0 5pt 2pt var(--secondary-color);
   outline-width: 0px;
@@ -197,5 +200,6 @@ button {
 .history-button {
   position: relative;
   margin-left: 200px;
+  margin-top: 15px;
+  padding: 30px;
 }
-
